--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -1,7 +1,19 @@
 body {
-    font-family: 'LatoRegular'; 
+    font-family: 'Lato'; 
    font-weight: normal; 
    font-style: normal; 
 
+    color: rgb(255, 255, 255);
+}
+
+h1, h2, h3 {
+    font-family: "Roboto Slab", serif !important;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+ 
+}
+
+a {
     color: rgb(255, 255, 255);
 }
