--- a/resources/mandatory/template.css
+++ b/resources/mandatory/template.css
@@ -1,10 +1,11 @@
 .body {
   --navbarw: 130px;
+  background-color: rgb(72,72,72);
 }
 
 .sidenav {
     height: 100%;
-    width: 130px;
+    width: 10%;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -27,8 +28,21 @@
   }
   
   #__main__ {
-    margin-left: 130px !important;
-    padding-left: 10px;
+    margin-left: 10% !important;
+    background-color: rgb(72,72,72);
+    padding-left: 1%;
+    width: 78%;
+  }
+
+  #__right__ {
+    margin-left: 90%;
+    height: 100%;
+    width: 10%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #323232;
   }
   
   @media screen and (max-height: 450px) {
